# ProtScout

./: .gitignore  README.md  benchmark_methods.ipynb  enzyme_kinetics.tsv  pyproject.toml  requirements.txt  test_lipase_dataset.ipynb  test_mutants_dataset.ipynb  test_protscout.sh
configs/: catapro_workflow.yml  example_workflow.yaml  example_workflow.yml  example_workflow_cat.yaml  ultra_condition.yaml
data/burkholderia/: README.txt  kinetic_data.tsv  lipase_seq.fasta  optimal_T_pH.txt  sequence.gb  sequence.txt
data/kemp_eliminase_mutants/: kinetic_data.tsv  mutant_sequences.fasta  paper_nt_sequences.fasta  rcsb_pdb_7K4P.fasta
data/lipase_review/: kinetic_data.tsv  physicochemical_data.tsv  sequences.faa
data/lipase_review/acinetobacter_xmz/: sequence.gb  sequence.txt
data/lipase_review/bacillus_stratosphericus/: optimal_T_pH.txt  sequence.gb  sequence.txt
envs/: environment-dev.yml  environment.yml
notebooks/: geopoc_example.ipynb
predictors/CatPred/: Dockerfile
predictors/CatPred/.ipynb_checkpoints/: Dockerfile-checkpoint  demo-checkpoint.ipynb  demo_run-checkpoint.py  predict-checkpoint.sh  predict_kinetics-checkpoint.py  requirements-checkpoint.txt
predictors/EpHod/: .gitignore  Dockerfile
predictors/GATSol/: .dockerignore  .gitignore  Dockerfile
predictors/GeoPoc/: .gitignore  Dockerfile
predictors/deepStabP/: .gitignore
predictors/esmfold-docker-image/: .gitignore  Dockerfile
results/: analysis_results.txt
scripts/: predict_properties.py  process_catpred.py  process_temberture.py  run_catpred.sh  run_esmfold.sh  run_geopoc.sh
src/proteinrank/: predictor_helpers.py
src/protscout/: __init__.py  __main__.py  classic_predictors.py  cli.py  config.py  container_management.py  predictor_helpers.py  predictors.py  preselection.py  utils.py  workflow.py
src/protscout/scripts/: make_output_tables.py  prepare_catpred_inputs.py  process_catpred.py  process_geopoc.py  remove_sequences_without_pdb.py  run_esm2.sh
src/protscout/scripts/catapro/: prepare_catapro_inputs.py  process_catapro.py  run_catapro.sh
src/protscout/scripts/catpred/: run_catpred.sh
src/protscout/scripts/gatsol/: process_gatsol.py  run_gatsol.sh
src/protscout/scripts/preprocess/: clean_sequences.py  make_output_tables.py  predict_classic_properties.py
src/protscout/scripts/temberture/: run_temberture.sh
src/protscout/scripts/temstapro/: process_temstapro.py  run_temstapro.sh
test/: sequences.fasta
tests/data/: metadata.tsv  sequences.fasta  substrate_analogs.tsv
tests/data/catpred_data/: processed_files.txt  processed_input.csv  processed_input.json
tests/data/catpred_data/PET/: input.csv
tests/data/clean_sequences/: sequences.faa  sequences.fasta
tests/outputs/: .workflow_state.json
tests/outputs/geopoc/sequences/: salt_preds.csv
workflow/: NOTES.md
workflow/preprocess_catpred/: Dockerfile  NOTES.md  prepare_catpred_inputs.py
workflow/process_pdb/: Dockerfile  NOTES.md  remove_sequences_without_pdb.py
